--- a/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
+++ b/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <h1>Задания для парсинга</h1>
+    <a href="{% url 'mainapp:create_task' %}">Создать задачу</a>
     <table border="1">
         <tr>
             {% for th_head in table_head %}
@@ -32,7 +33,8 @@
                 </span>
                 </td>
                 <td><span class="update_time">{{ object.update_time }}</span></td>
-                <td><span class="edit_link"><a href="">{{ object.id }}</a></span></td>
+                <td><span class="delete_task_link"><a href="{% url 'mainapp:delete_task' object.id %}">Удалить</a></span></td>
+                <td><span class="edit_task_link"><a href="{% url 'mainapp:update_task' object.id %}">Изменить</a></span></td>
             </tr>
         {% endfor %}
     </table>
