--- a/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
+++ b/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
@@ -23,7 +23,8 @@
         </tr>
         {% for object in object_list %}
             <tr>
-                <td><span class="task_link"><a href="{{ object.link }}">{{ object.link|truncatechars:50 }}</a></span></td>
+                <td><a href="{{ object.link }}"><img src="{{ object.img_ }}" class="mini_img"/></a></td>
+                <!-- <td><span class="task_link"><a href="{{ object.link }}">{{ object.link|truncatechars:50 }}</a></span></td> -->
                 <td><span class="are_activate">
                     {% if object.activate == True %}
                         <span>Активно</span>
