--- a/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
+++ b/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
@@ -15,6 +15,7 @@
 <body>
     <h1>Задания для парсинга</h1>
     <a href="{% url 'mainapp:create_task' %}">Создать задачу</a>
+    <a href="{% url 'export:create_export_history' 0 %}">Выгрузить всё</a>
     <table border="1">
         <tr>
             {% for th_head in table_head %}
