--- a/ali_parse_helper/users/templates/registration/login.html
+++ b/ali_parse_helper/users/templates/registration/login.html
@@ -4,7 +4,7 @@
 {% block main %}
 <div class="card">
 <div class="card-body">
-<h4 class="card-title">Зайти в свой аккаунт</h4>
+<h4 class="card-title">Log in to your account</h4>
 
 <form method="post">
 {% csrf_token %}
@@ -12,10 +12,12 @@
 
 {{ form|crispy }}
 
-<button type="submit" class="btn btn-primary btn-block">Войти</button>
+<button type="submit" class="btn btn-primary btn-block">Log in</button>
 </form>
 </div>
 </div>
 {% endblock %}
+
+
 
 
