--- a/ali_parse_helper/pages/templates/pages/base.html
+++ b/ali_parse_helper/pages/templates/pages/base.html
@@ -1,10 +1,27 @@
+<header>
+  <a href="{% url 'home' %}">Главная страница</a> | <a href="{% url 'about' %}">О нас</a>
+</header>
+
+{% block content %}
+{% endblock %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
+    <title>Регистрация пользователя</title>
 </head>
 <body>
-
-</body>
+    <div class="container d-flex h-100">
+        <div class="row justify-content-center">
+            <div class="col-10">
+                <h1 class="text-center"></h1>>
+                {% block main %}
+                {% endblock %}
+            </div>
+      </div>
+    </div>>
+  </body>
 </html>
