--- a/ali_parse_helper/mainapp/templates/mainapp/index.html
+++ b/ali_parse_helper/mainapp/templates/mainapp/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% if user.is_authenticated %}
   Привет, {{ user.username }}!
-  <p><a href="{% url 'mainapp:user_tasks' %}">Задачи для парсинга</a></p>>
+  <p><a href="{% url 'mainapp:user_tasks' %}">Задачи для парсинга</a></p>
   <p><a href="{% url 'logout' %}">выйти</a></p>
 {% else %}
   <p>Вы не залогинены.</p>
