--- a/ali_parse_helper/pages/templates/pages/base.html
+++ b/ali_parse_helper/pages/templates/pages/base.html
@@ -17,11 +17,11 @@
     <div class="container d-flex h-100">
         <div class="row justify-content-center">
             <div class="col-10">
-                <h1 class="text-center"></h1>>
+                <h1 class="text-center"></h1>
                 {% block main %}
                 {% endblock %}
             </div>
       </div>
-    </div>>
+    </div>
   </body>
 </html>
