--- a/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
+++ b/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
@@ -14,33 +14,41 @@
     {% endblock %}
 </head>
 <body>
-    <h1>Задания для парсинга</h1>
-    <a href="{% url 'mainapp:create_task' %}">Создать задачу</a>
-    <a href="{% url 'export:create_export_history' 0 %}">Выгрузить всё</a>
-    <table border="1">
-        <tr>
-            {% for th_head in table_head %}
-                <th>{{ th_head }}</th>
+    <div class="container">
+        <h1>Задания для парсинга</h1>
+        <div class="like_bookmark">
+            <a href="{% url 'mainapp:create_task' %}">Создать задачу</a>
+            <a href="{% url 'export:create_export_history' 0 %}">Выгрузить всё</a>
+        </div>
+        <div class="tasks_list">
+            {% for object in object_list %}
+                {% if not forloop.first %}
+                    <hr noshade size="1">
+                {% endif %}
+                <div class="img_">
+                    <a href="{{ object.link }}"><img src="{{ object.img_ }}" class="mini_img"/></a>
+                </div>
+                <div class="active_info">
+                    <span class="are_activate">
+                        {% if object.activate == True %}
+                            <span>Задание активно</span>
+                        {% else %}
+                            <span>Задание неактивно</span>
+                        {% endif %}
+                    </span>
+                </div>
+                <div class="update_time_div">
+                    <span class="update_time">{{ object.update_time }}</span>
+                </div>
+                <div class="edit_and_del">
+                    <span class="edit_task_link"><a href="{% url 'mainapp:update_task' object.id %}">Изменить</a></span>
+                    <span class="delete_task_link"><a href="{% url 'mainapp:delete_task' object.id %}">Удалить</a></span>
+                    <div class="create_export_div">
+                        <span class="create_export_hist"><a href="{% url 'export:create_export_history' object.id %}">Создать отчёт</a></span>
+                    </div>
+                </div>
             {% endfor %}
-        </tr>
-        {% for object in object_list %}
-            <tr>
-                <td><a href="{{ object.link }}"><img src="{{ object.img_ }}" class="mini_img"/></a></td>
-                <!-- <td><span class="task_link"><a href="{{ object.link }}">{{ object.link|truncatechars:50 }}</a></span></td> -->
-                <td><span class="are_activate">
-                    {% if object.activate == True %}
-                        <span>Активно</span>
-                    {% else %}
-                        <span>Неактивно</span>
-                    {% endif %}
-                </span>
-                </td>
-                <td><span class="update_time">{{ object.update_time }}</span></td>
-                <td><span class="delete_task_link"><a href="{% url 'mainapp:delete_task' object.id %}">Удалить</a></span></td>
-                <td><span class="edit_task_link"><a href="{% url 'mainapp:update_task' object.id %}">Изменить</a></span></td>
-                <td><span class="create_export_hist"><a href="{% url 'export:create_export_history' object.id %}">Создать отчёт</a></span></td>
-            </tr>
-        {% endfor %}
-    </table>
+        </div>
+    </div>
 </body>
 </html>
