--- a/ali_parse_helper/static/css/style.css
+++ b/ali_parse_helper/static/css/style.css
@@ -1,3 +1,61 @@
+html {
+    overflow-y: scroll;
+}
+body {
+    margin: 0;
+    /*background-color: #f6e7ae;*/
+    background-color: #f7f5d1;
+}
 .mini_img {
     width: 100px;
+}
+a {
+    color: #2c9585;
+    text-decoration: none;
+    font-family:  tahoma, arial, verdana
+}
+a:visited {
+    color: #2c9585;
+    text-decoration: none;
+    font-family:  tahoma, arial, verdana
+}
+a:hover {
+    color: #2c9585;
+    text-decoration: underline;
+    font-family:  tahoma, arial, verdana
+}
+.container {
+    width: 960px;
+    margin: 0 auto;
+    /*background-color: #f6e7ae;*/
+    background-color: #f7f5d1;
+}
+.tasks_list {
+    /*background-color: #f7f5d1;*/
+    /*background-color: #f6e7ae;*/
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 16px;
+    margin-top: 10px;
+}
+.img_, .active_info, .update_time_div, .edit_and_del {
+    display: inline-block;
+}
+.delete_task_link {
+    display: block;
+}
+.edit_and_del {
+    float: right;
+}
+.like_bookmark {
+    padding-left: 10px;
+}
+.like_bookmark a {
+    background-color: #92cdb6;
+    padding: 10px;
+    border-radius: 8px 8px 0px 0px;
+    font-weight: bold;
+}
+.like_bookmark a:hover {
+    background-color: #c9b675;
 }
