--- a/ali_parse_helper/static/css/style.css
+++ b/ali_parse_helper/static/css/style.css
@@ -24,19 +24,20 @@ a:hover {
     text-decoration: underline;
     font-family:  tahoma, arial, verdana
 }
-.container {
+.container_ {
     width: 960px;
     margin: 0 auto;
     /*background-color: #f6e7ae;*/
     background-color: #f7f5d1;
 }
-.tasks_list {
-    /*background-color: #f7f5d1;*/
-    /*background-color: #f6e7ae;*/
+.tasks_list, .export_list, .index_list {
     background-color: #fff;
     border-radius: 8px;
     padding: 16px;
     margin-top: 10px;
+}
+.index_list {
+    text-align: center;
 }
 .img_, .active_info, .update_time_div, .edit_and_del {
     display: inline-block;
@@ -55,7 +56,13 @@ a:hover {
     padding: 10px;
     border-radius: 8px 8px 0px 0px;
     font-weight: bold;
+    padding-bottom: 12px;
 }
 .like_bookmark a:hover {
     background-color: #c9b675;
+}
+.index_img {
+    width: 400px;
+    box-shadow: 0 0 5px;
+    margin: 10px;
 }
