--- a/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
+++ b/ali_parse_helper/mainapp/templates/mainapp/tasks_base.html
@@ -1,54 +1,43 @@
+{% extends 'pages/base.html' %}
 
-<!DOCTYPE html>
-{% load static %}
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>
-        {% block title %}
-            {{ title|title }}
-        {% endblock %}
-    </title>
-    {% block css %}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    {% endblock %}
-</head>
-<body>
-    <div class="container">
-        <h1>Задания для парсинга</h1>
-        <div class="like_bookmark">
-            <a href="{% url 'mainapp:create_task' %}">Создать задачу</a>
-            <a href="{% url 'export:create_export_history' 0 %}">Выгрузить всё</a>
-        </div>
-        <div class="tasks_list">
-            {% for object in object_list %}
-                {% if not forloop.first %}
-                    <hr noshade size="1">
-                {% endif %}
-                <div class="img_">
-                    <a href="{{ object.link }}"><img src="{{ object.img_ }}" class="mini_img"/></a>
-                </div>
-                <div class="active_info">
-                    <span class="are_activate">
-                        {% if object.activate == True %}
-                            <span>Задание активно</span>
-                        {% else %}
-                            <span>Задание неактивно</span>
-                        {% endif %}
-                    </span>
-                </div>
-                <div class="update_time_div">
-                    <span class="update_time">{{ object.update_time }}</span>
-                </div>
-                <div class="edit_and_del">
-                    <span class="edit_task_link"><a href="{% url 'mainapp:update_task' object.id %}">Изменить</a></span>
-                    <span class="delete_task_link"><a href="{% url 'mainapp:delete_task' object.id %}">Удалить</a></span>
-                    <div class="create_export_div">
-                        <span class="create_export_hist"><a href="{% url 'export:create_export_history' object.id %}">Создать отчёт</a></span>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
+{% block title %}
+    {{ title|title }}
+{% endblock %}
+
+
+{% block main %}
+    <h1>Задания для парсинга</h1>
+    <div class="like_bookmark">
+        <a href="{% url 'mainapp:create_task' %}">Создать задачу</a>
+        <a href="{% url 'export:create_export_history' 0 %}">Выгрузить всё</a>
     </div>
-</body>
-</html>
+    <div class="tasks_list">
+        {% for object in object_list %}
+            {% if not forloop.first %}
+                <hr noshade size="1">
+            {% endif %}
+            <div class="img_">
+                <a href="{{ object.link }}"><img src="{{ object.img_ }}" class="mini_img"/></a>
+            </div>
+            <div class="active_info">
+                <span class="are_activate">
+                    {% if object.activate == True %}
+                        <span>Задание активно</span>
+                    {% else %}
+                        <span>Задание неактивно</span>
+                    {% endif %}
+                </span>
+            </div>
+            <div class="update_time_div">
+                <span class="update_time">{{ object.update_time }}</span>
+            </div>
+            <div class="edit_and_del">
+                <span class="edit_task_link"><a href="{% url 'mainapp:update_task' object.id %}">Изменить</a></span>
+                <span class="delete_task_link"><a href="{% url 'mainapp:delete_task' object.id %}">Удалить</a></span>
+                <div class="create_export_div">
+                    <span class="create_export_hist"><a href="{% url 'export:create_export_history' object.id %}">Создать отчёт</a></span>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+{% endblock %}
