--- a/ali_parse_helper/accounts/templates/registration/login.html
+++ b/ali_parse_helper/accounts/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Войти в свой аккаунт{% endblock %}
+{% block title %}Войти в свой аккаунт:{% endblock %}
 
 {% block content %}
 <h2>Войти</h2>
