--- a/ali_parse_helper/mainapp/templates/mainapp/create_task.html
+++ b/ali_parse_helper/mainapp/templates/mainapp/create_task.html
@@ -14,5 +14,6 @@
         {{ form.as_p}}
         <input type="submit" value="Применить">
     </form>
+    <p><a href="{% url 'logout' %}">выйти</a></p>
 </body>
 </html>
