--- a/ali_parse_helper/mainapp/templates/mainapp/index.html
+++ b/ali_parse_helper/mainapp/templates/mainapp/index.html
@@ -1,6 +1,18 @@
 {% extends 'base.html' %}
 {% load static %}
 
+<link rel="stylesheet" type="text/css" href="{% static 'ali_parse_helper/style.css' %}"/>
+
+<nav class="navbar navbar-default">
+    <div class ="container-fluid">
+
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'mainapp:index' %}">Parser</a>
+        </div>
+
+        </div>
+</nav>
+
 {% block title %}Главная страница{% endblock %}
 
 {% block content %}
