--- a/ali_parse_helper/pages/templates/pages/base.html
+++ b/ali_parse_helper/pages/templates/pages/base.html
@@ -1,28 +1,66 @@
-{% load static %}
-
-<header>
-  <a href="{% url 'home' %}">Главная страница</a> | <a href="{% url 'about' %}">О нас</a>
-</header>
-
-{% block content %}
-{% endblock %}
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="rus">
 <head>
     <meta charset="UTF-8">
-    <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
+    <title>{% block title %}Parser{% endblock %}</title>
+    {% load staticfiles %}
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <title>
-        {% block title %}
-        {% endblock %}
-    </title>
+
 </head>
-    <body>
-        <div class="container_">
-            {% block main %}
-            {% endblock %}
+<body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+
+        <!-- Header -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'mainapp:index' %}">Parser</a>
         </div>
-    </body>
+
+        <!-- Items -->
+        <div class="collapse navbar-collapse" id="topNavBar">
+            <ul class="nav navbar-nav">
+                <li class="{% block home_active %}{% endblock %}"><a href="{% url 'mainapp:index' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Главная </a></li>
+                <li class="{% block tasks_active %}{% endblock %}"><a href="{% url 'mainapp:user_tasks' %}"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbsp;Задачи</a></li>
+            </ul>
+            <form class="navbar-form navbar-left" role="search" method="get" action="{% url 'mainapp:index' %}">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="q" value="{{ request.GET.q }}">
+                </div>
+                <button type="submit" class="btn btn-default">Поиск</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="{% url 'mainapp:create_task' %}">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;Добавить задачу
+                    </a>
+                </li>
+                <li>
+                     <a href="{% url 'logout' %}">
+                         <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;Выйти
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+</nav>
+<div class="container_">
+    {% block main %}
+    {% endblock %}
+</div>
+</body>
+<div class="navbar-text pull-left">
+    &copy; Курчигин Дмитрий и Арсуага Маргарита, 2019
+    </div>
 </html>
+
