--- a/ali_parse_helper/pages/templates/pages/base.html
+++ b/ali_parse_helper/pages/templates/pages/base.html
@@ -29,7 +29,7 @@
         <!-- Items -->
         <div class="collapse navbar-collapse" id="topNavBar">
             <ul class="nav navbar-nav">
-                <li class="{% block home_active %}{% endblock %}"><a href="{% url 'mainapp:index' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Главная </a></li>
+                <li class="{% block home_active %}{% endblock %}"><a href="{% url 'main' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Главная </a></li>
                 <li class="{% block tasks_active %}{% endblock %}"><a href="{% url 'mainapp:user_tasks' %}"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbsp;Задачи</a></li>
             </ul>
             <form class="navbar-form navbar-left" role="search" method="get" action="{% url 'mainapp:index' %}">
