--- a/ali_parse_helper/pages/templates/pages/base.html
+++ b/ali_parse_helper/pages/templates/pages/base.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-light" style="background-color: #fff;">
     <div class="container-fluid">
 
         <!-- Header -->
@@ -57,6 +57,7 @@
 {% block body %}
 {% endblock %}
 </body>
+
 <div class="navbar-text pull-left">
     &copy; Курчигин Дмитрий и Арсуага Маргарита, 2019
     </div>
